blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>One awarded job on one site, from pre-start to close-out and the defects period. Created when a tender or quote is won. Owned by the project manager, not the estimator.</description>
    <label>Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>