blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Actual_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_completion_date__c</fullName>
    <description>The date practical completion was certified.</description>
    <label>Actual completion</label>
    <type>Date</type>
</CustomField>