blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_reason__c</fullName>
    <description>Why the project did not complete. Required on the cancelled stage.</description>
    <label>Cancellation reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client cancelled</fullName>
            </value>
            <value>
                <fullName>Client funding lost</fullName>
            </value>
            <value>
                <fullName>Contract dispute</fullName>
            </value>
            <value>
                <fullName>Client insolvent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>