blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Contract_value__c.field-meta.xml
<CustomField>
    <fullName>Contract_value__c</fullName>
    <description>Agreed contract sum at award, before variations.</description>
    <label>Contract value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>