blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Final_margin__c.field-meta.xml
<CustomField>
    <fullName>Final_margin__c</fullName>
    <description>Margin achieved once the final account is agreed.</description>
    <label>Final margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>