blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Insurance_verified__c.field-meta.xml
<CustomField>
    <fullName>Insurance_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The client has confirmed our insurance certificates meet the contract.</description>
    <label>Insurance verified</label>
    <type>Checkbox</type>
</CustomField>