blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Planned_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_completion_date__c</fullName>
    <description>The contractual date for practical completion.</description>
    <label>Planned completion</label>
    <type>Date</type>
</CustomField>