blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Project_manager__c.field-meta.xml
<CustomField>
    <fullName>Project_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member running the job day to day.</description>
    <label>Project manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Projects Project manager</relationshipLabel>
    <relationshipName>Project_Project_manager</relationshipName>
    <type>Lookup</type>
</CustomField>