blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Rams_approved__c.field-meta.xml
<CustomField>
    <fullName>Rams_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Risk assessments and method statements have been approved by the client or principal contractor.</description>
    <label>RAMS approved</label>
    <type>Checkbox</type>
</CustomField>