blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>The job number used in accounts and on site, so the CRM matches finance records.</description>
    <label>Project reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>