blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Retention_held__c.field-meta.xml
<CustomField>
    <fullName>Retention_held__c</fullName>
    <description>The amount the client is holding back until the defects period ends.</description>
    <label>Retention held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>