blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Retention_release_date__c.field-meta.xml
<CustomField>
    <fullName>Retention_release_date__c</fullName>
    <description>When retention falls due. A reminder fires before it.</description>
    <label>Retention release date</label>
    <type>Date</type>
</CustomField>