blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-start</fullName>
            </value>
            <value>
                <fullName>Mobilising</fullName>
            </value>
            <value>
                <fullName>On site</fullName>
            </value>
            <value>
                <fullName>Snagging</fullName>
            </value>
            <value>
                <fullName>Defects period</fullName>
            </value>
            <value>
                <fullName>Closed out</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>