blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Start_on_site_date__c.field-meta.xml
<CustomField>
    <fullName>Start_on_site_date__c</fullName>
    <description>The day work starts on site.</description>
    <label>Start on site</label>
    <type>Date</type>
</CustomField>