blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Winning_deal__c.field-meta.xml
<CustomField>
    <fullName>Winning_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties the project to the bid that won it, so estimated and final margin can be compared.</description>
    <label>Winning deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>