blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/fields/Work_type__c.field-meta.xml
<CustomField>
    <fullName>Work_type__c</fullName>
    <description>The kind of work, copied from the deal. Used to compare margin by type.</description>
    <label>Work type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New build</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
            <value>
                <fullName>Fit-out</fullName>
            </value>
            <value>
                <fullName>Maintenance and repair</fullName>
            </value>
            <value>
                <fullName>Specialist trade package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>