blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/validationRules/Gate_project_delivery_closed_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_project_delivery_closed_out</fullName>
    <active>true</active>
    <description>Stage gate: Project delivery, Closed out and later stages need Final margin.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Pre-start", 1, "Mobilising", 2, "On site", 3, "Snagging", 4, "Defects period", 5, "Closed out", 6, 0) &gt;= 6, ISBLANK(Final_margin__c))</errorConditionFormula>
    <errorDisplayField>Final_margin__c</errorDisplayField>
    <errorMessage>Fill in Final margin before moving to Closed out.</errorMessage>
</ValidationRule>