blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/validationRules/Gate_project_delivery_defects_period.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_project_delivery_defects_period</fullName>
    <active>true</active>
    <description>Stage gate: Project delivery, Defects period and later stages need Actual completion, Retention held and Retention release date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Pre-start", 1, "Mobilising", 2, "On site", 3, "Snagging", 4, "Defects period", 5, "Closed out", 6, 0) &gt;= 5, OR(ISBLANK(Actual_completion_date__c), ISBLANK(Retention_held__c), ISBLANK(Retention_release_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Actual completion, Retention held and Retention release date before moving to Defects period.</errorMessage>
</ValidationRule>