blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/validationRules/Gate_project_delivery_mobilising.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_project_delivery_mobilising</fullName>
    <active>true</active>
    <description>Stage gate: Project delivery, Mobilising and later stages need Project manager and Planned completion.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Pre-start", 1, "Mobilising", 2, "On site", 3, "Snagging", 4, "Defects period", 5, "Closed out", 6, 0) &gt;= 2, OR(ISBLANK(Project_manager__c), ISBLANK(Planned_completion_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Project manager and Planned completion before moving to Mobilising.</errorMessage>
</ValidationRule>