blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/validationRules/Gate_project_delivery_on_site.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_project_delivery_on_site</fullName>
    <active>true</active>
    <description>Stage gate: Project delivery, On site and later stages need Start on site, RAMS approved and Insurance verified.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Pre-start", 1, "Mobilising", 2, "On site", 3, "Snagging", 4, "Defects period", 5, "Closed out", 6, 0) &gt;= 3, OR(ISBLANK(Start_on_site_date__c), NOT(Rams_approved__c), NOT(Insurance_verified__c)))</errorConditionFormula>
    <errorMessage>Fill in Start on site, RAMS approved and Insurance verified before moving to On site.</errorMessage>
</ValidationRule>