blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/validationRules/Gate_project_delivery_snagging.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_project_delivery_snagging</fullName>
    <active>true</active>
    <description>Stage gate: Project delivery, Snagging and later stages need Planned completion.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Pre-start", 1, "Mobilising", 2, "On site", 3, "Snagging", 4, "Defects period", 5, "Closed out", 6, 0) &gt;= 4, ISBLANK(Planned_completion_date__c))</errorConditionFormula>
    <errorDisplayField>Planned_completion_date__c</errorDisplayField>
    <errorMessage>Fill in Planned completion before moving to Snagging.</errorMessage>
</ValidationRule>