blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/validationRules/Lost_project_delivery_cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_project_delivery_cancelled</fullName>
    <active>true</active>
    <description>Lost reason: Project delivery, Cancelled needs Cancellation reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Cancelled"), ISBLANK(TEXT(Cancellation_reason__c)))</errorConditionFormula>
    <errorDisplayField>Cancellation_reason__c</errorDisplayField>
    <errorMessage>Fill in Cancellation reason before closing this as Cancelled.</errorMessage>
</ValidationRule>