blueprints/construction-trades/salesforce/force-app/main/default/objects/Project__c/listViews/Projects_on_site.listView-meta.xml
<ListView>
    <fullName>Projects_on_site</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Planned_completion_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>On site,Snagging</value>
    </filters>
    <label>Projects on site</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>